Fix spacing and rename hide class

--- a/src/styles/components/_embed.sass
+++ b/src/styles/components/_embed.sass
@@ -98,9 +98,9 @@
 	cursor: pointer
 
 #embed__progress::-ms-fill
-  border: none
+	border: none
 
-.hide
+.embed__progress--hide
 	display: none
 
 @-webkit-keyframes pulsate
